@@ -10,6 +10,7 @@ $ flask run
 """
 
 import os
+from datetime import datetime
 from pathlib import Path
 
 from flask import Flask, redirect, render_template
@@ -29,11 +30,17 @@ def create_app(test_config=None):
     if template_dir := os.getenv("SANDBOX_TEMPLATE_DIR"):
         app.template_folder = template_dir
 
+    @app.context_processor
+    def inject_now():
+        return {"now": datetime.utcnow()}
+
     @app.route("/<name>.html")
     def hello(name):
         static_dir = Path(app.static_folder)
-        use_css = True if (static_dir / f'{name}.css').exists() else False            
-        use_js = True if (static_dir / f'{name}.js').exists() else False            
-        return render_template(f"{name}.html", name=name, use_css=use_css, use_js=use_js)
+        use_css = True if (static_dir / f"{name}.css").exists() else False
+        use_js = True if (static_dir / f"{name}.js").exists() else False
+        return render_template(
+            f"{name}.html", name=name, use_css=use_css, use_js=use_js
+        )
 
     return app
